# RGBDVisualOdometryParticleSwarmOptimization

./: CMakeLists.txt  CMakeLists_akaze_openmp_niezainstalowane.txt  README.md  akaze.cpp  main_ate.cpp  main_ate_5param.cpp  main_rpe.cpp  main_rpe_5param.cpp
akaze-opencv/: akaze.cpp
odometria/: CMakeLists.txt  CMakeLists.txt~  cala_petla.cpp  odometrie.cpp  odometrie.cpp~
ransaci/: CMakeLists.txt  ransaci.cpp  ransaci.cpp~
rpe/: rpe.cpp  rpe.h
